# single-stock-pick-from-sp500

./: .gitignore  NOTES.md  POLICY.md  README.md  pyproject.toml
.claude/skills/shared/: pick-protocol.md
.claude/skills/stock-pick/: SKILL.md
.claude/skills/stock-pick-dip/: SKILL.md
.claude/skills/stock-pick-momentum/: SKILL.md
UI/: dashboard.py
output/: final_pick.md  final_ranking.md  funnel.json  research_dossier.md  shortlist.csv  shortlist.json
output/dip/: final_pick.md  final_ranking.md  funnel.json  research_dossier.md  shortlist.csv  shortlist.json
output/momentum/: final_pick.md  final_ranking.md  funnel.json  research_dossier.md  shortlist.csv  shortlist.json
picks/: ledger.csv
scripts/: fetch.py  scorecard.py  screen.py  universe.py
