[project]
name = "conviction-pick-sp500"
version = "0.1.0"
description = "Deterministic S&P 500 screen → ~50 quality category-leaders, then an AI multi-agent skill picks one stock with explosive-return potential."
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "lxml>=5.0",
]

[tool.uv]
dev-dependencies = []
